classic chat bug seeking

--- a/src/app/chat/components/collocutors-list/projects-filter/projects-filter.component.html
+++ b/src/app/chat/components/collocutors-list/projects-filter/projects-filter.component.html
@@ -1,5 +1,5 @@
 <div class="filters" (clickOutside)="hideMenu()">
-    <div class="current {{ currentType }}" (click)="toggleListOfTypes()"><span>{{ currentTypeName}}</span> <span class="corner" [ngClass]="isListVisible? 'up': 'down'"></span></div>
+    <div class="current {{ currentType }}" (click)="toggleListOfTypes()"><span>{{ currentTypeName | translate}}</span> <span class="corner" [ngClass]="isListVisible? 'up': 'down'"></span></div>
     <div class="types-list" [ngClass]="{open: isListVisible=== true && isListVisible, 'hidden': isListVisible=== false && !isListVisible}">
         <ul>
             <li *ngFor="let el of projectTypes" class="{{ el.type }}" (click)="setProjectType(el.type, el.name)">
