--- a/src/app/shared/modules/system-messages/system-messages.component.html
+++ b/src/app/shared/modules/system-messages/system-messages.component.html
@@ -1,5 +1,6 @@
-<section class="notifications">
-    <mat-icon aria-hidden="false" matBadge="1" aria-label="Example home icon" matBadgeColor="warn" (click)="toggleMessageList()" class="test" [ngClass]="{active: newSystemMessages}">notifications
+<section class="notifications" >
+    <mat-icon aria-hidden="false" matBadge="1" aria-label="Example home icon" matBadgeColor="warn" (click)="toggleMessageList()" 
+    class="test" [ngClass]="{active: newSystemMessages, 'main-pg': pageType === 'main-pg'}">notifications
     </mat-icon>
     <div class="notifications-wrap" *ngIf="showMessagesListBlock" (clickOutside)="toggleMessageList()" [exclude]="'.test'">
         <div class="notifications-title" *ngIf="systemMessagesArr.length !== 0">
