--- a/src/app/dashboard-page/dashboard-pages/finance-page/components/user-finances/user-finances.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/finance-page/components/user-finances/user-finances.component.scss
@@ -633,8 +633,17 @@
       }
       .statistic-item{
         width: auto;
+        min-height: auto;
+        max-height: auto;
+        border: 1px solid rgb(235, 238, 255);
+        box-shadow: none;
+        padding: 14px 13px;
+        border-radius: 10px;
         p.title{
           font-size: 14px;
+        }
+        p.value{
+          font-size: 16px;
         }
         .icon {
           width: 25px;
