--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.html
@@ -1,6 +1,7 @@
 <div class="step-wrapper" *ngIf="userService && titlePosition">
     <form #form="ngForm" (ngSubmit)="goNextStep(form)">
         <h3>{{'dashboard.create-service.first-step.title' | translate}}</h3>
+        <span class="steps-counter">{{'dashboard.create-service.first-step.steps-counter' | translate}}</span>
         <h5>{{'dashboard.create-service.first-step.subtitle' | translate}}</h5>
         <mat-form-field floatLabel="always" class="service-title" appearance="outline" maxlength="70">
             <textarea name="title" #serviceTit [(ngModel)]="userService.title" matInput required maxlength="70" tooltip="{{'dashboard.create-service.first-step.tool-tip.name-title' | translate}}" tooltipDescription="{{'dashboard.create-service.first-step.tool-tip.name-subtitle' | translate}}"
@@ -14,7 +15,7 @@
                     <mat-select (ngModelChange)="loadSubcategoryFilter($event)" [(ngModel)]="userService.category" name="category" required tooltipDescription="{{'dashboard.create-service.first-step.tool-tip.category-subtitle' | translate}}" tooltip="{{'dashboard.create-service.first-step.tool-tip.category-title' | translate}}"
                         placement="right">
                         <mat-option *ngFor="let category of categoryList" [value]="category.link">
-                            {{ category['name_' + currentLang] }} 
+                            {{ category['name_' + currentLang] }}
                         </mat-option>
                     </mat-select>
                 </mat-form-field>
@@ -51,10 +52,10 @@
         </div>
 
         <div class="portfolio"
-        outsideTooltipOnHover="{{'dashboard.create-service.first-step.tool-tip.file-loader-title' | translate}}" 
+        outsideTooltipOnHover="{{'dashboard.create-service.first-step.tool-tip.file-loader-title' | translate}}"
             outsideTooltipHoverDescription="{{'dashboard.create-service.first-step.tool-tip.file-loader-subtitle' | translate}}" placement="right"
         >
-            
+
             <h5>{{'dashboard.create-service.first-step.portfolio-title' | translate}}</h5>
 
             <div class="items" >
