--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/my-services-home/my-services-home.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/my-services-home/my-services-home.component.scss
@@ -401,3 +401,70 @@ mat-tab-group ::ng-deep {
 @media (max-width: 1360px) {
 
 }
+
+@media (max-width: 1024px) {
+  mat-tab-group ::ng-deep {
+    .mat-tab-header {
+      margin: 0 15px;
+    }
+    .mat-tab-body-wrapper {
+      margin-top: 40px;
+      padding: 0 40px;
+    }
+    .mat-tab-body-content{
+      margin: 0 -15px;
+    }
+  }
+  .add-service{
+    width: calc(50% - 30px);
+    max-height: 250px;
+    min-height: 250px;
+    margin: 0 15px;
+  }
+  .item{
+    width: calc(50% - 30px);
+    max-height: 250px;
+    min-height: 250px;
+    margin: 0 15px 30px;
+    .service-photo{
+      height: 200px;
+    }
+  }
+}
+
+@media (max-width: 767px) {
+  h3{
+    font-size: 18px;
+    line-height: 23px;
+    padding: 25px 15px 15px;
+  }
+  mat-tab-group ::ng-deep {
+    .mat-tab-header {
+      margin: 0 5px;
+    }
+    .mat-tab-body-wrapper {
+      margin-top: 25px;
+      padding: 0;
+    }
+    .mat-tab-body-content{
+      margin: 0;
+      padding: 0 15px;
+
+    }
+  }
+  .add-service{
+    width: 100%;
+    max-height: 250px;
+    min-height: 250px;
+    margin: 0 0px 25px;
+  }
+  .item{
+    width: 100%;
+    max-height: 250px;
+    min-height: 250px;
+    margin: 0 0 25px;
+    .service-photo{
+      height: 200px;
+    }
+  }
+}
