--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-creation.component.scss
@@ -1139,6 +1139,9 @@ input[type=number] {
     }
   }
   .extra-packages-wrap .extra-packages{
+    &> div > div{
+      padding: 0 5px 0 10px;
+    }
     .deffault-field .option-wrap{
       flex-direction: column;
       align-items: flex-start;
