--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/last-step-creation/last-step-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/last-step-creation/last-step-creation.component.html
@@ -9,7 +9,7 @@
               Публикуйте услугу и получайте уже первые заказы.
           </p>
       </section>
-      <div class="form-butons">
+      <div class="form-buttons">
         <button class="back" (click)="roureToServices()">сохранить и выйти</button>
         <button class="save" (click)="publishOffer()">опубликовать</button>
       </div>
