--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-creation.component.html
@@ -180,8 +180,8 @@
 
         </div>
 
-        <div class="form-butons">
-            <button (click)="quite()" class="back">{{'dashboard.create-service.go-back' | translate}}</button>
+        <div class="form-buttons">
+            <button (click)="quite()" class="back">{{'general.exit' | translate}}</button>
             <button class="save" type="submit">{{'dashboard.create-service.save-and-next' | translate}}</button>
         </div>
     </form>
