--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/first-step-service-creation/first-step-service-creation.component.html
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </div>
-        <div class="form-butons">
+        <div class="form-buttons">
             <button (click)="quite()" class="back">{{'general.exit' | translate}}</button>
             <button class="save" type="submit">
               {{'dashboard.create-service.save-and-next' | translate}}
