--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/second-step-creation/second-step-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/second-step-creation/second-step-creation.component.scss
@@ -407,7 +407,7 @@ ngb-popover-window {
   .items {
     justify-content: flex-start;
   }
-  .form-butons {
+  .form-buttons {
     button {
       font-size: 13px;
       padding: 10px 24px;
@@ -458,16 +458,28 @@ ngb-popover-window {
 @media (max-width: 767px) {
   .form-buttons{
     margin-top: 25px;
+    margin-bottom: 20px;
     flex-direction: column;
     align-items: center;
     button{
       padding: 10px 24px;
-      max-width: 220px;
+      max-width: 235px;
       width: 100%;
       &:first-of-type {
         margin-bottom: 15px;
       }
     }
   }
-
+  :host ::ng-deep .quill-editor .ql-editor{
+    height: 180px !important;
+  }
+  form::ng-deep {
+    h5{
+      font-size: 12px;
+      line-height: 16px;
+    }
+  }
+  .form-buttons{
+    margin-top: 10px;
+  }
 }
