servce creation steps adapt

--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/create-service.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/create-service.component.scss
@@ -474,4 +474,12 @@
   //   }
   // }
 
+  .step-detail::ng-deep {
+    form {
+      ngb-popover-window, .ng-tooltip-outside {
+        display: none !important;
+      }
+    }
+  }
+
 }
