--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fourth-step-creation/fourth-step-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/fourth-step-creation/fourth-step-creation.component.scss
@@ -403,6 +403,9 @@ ngb-popover-window {
   .options{
     margin-bottom: 10px;
   }
+  .ng-tooltip {
+    display: none !important;
+  }
 }
 
 @media (max-width: 767px) {
