--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-creation.component.scss
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/components/create-service/third-step-creation/third-step-creation.component.scss
@@ -1113,6 +1113,9 @@ ngb-popover-window {
       }
     }
   }
+  .ng-tooltip {
+    display: none !important;
+  }
 }
 
 @media (max-width: 767px) {
@@ -1281,7 +1284,7 @@ ngb-popover-window {
           }
         }
         &.expanded{
-          padding: 20px 10px 35px 0px;
+          padding: 20px 10px 35px 10px;
         }
       }
       span{
